logdata-anomaly-miner (0.0.3~pre0) xenial; urgency=low

  * Backport of changes from Debian ITP process review, see
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=813096

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Tue, 14 Jun 2016 12:00:00 +0000

logdata-anomaly-miner (0.0.2) xenial; urgency=low

  * Added remote control support, command line tool for sending
    commands.
  * Added AnalysisContext as registry for analysis components
    and access point for remote control.
  * Added component to write events to syslog (read component
    documentation for CAVEATs)
  * Package structure fixes from Debian mentoring procedure
  * Bugfixes:
    * ModuloTimeMatchRule: time object path was ignored on error
    * Indent-formatting repaired, single-line mode added

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Thu, 12 May 2016 16:46:00 +0000

logdata-anomaly-miner (0.0.1) xenial; urgency=low

  * Bugfixes
  * Minor feature improvements (options)
  * New features:
    * MultiLocaleDateTimeModelElement: decode timestamps not encoded
      using local system language or byte encoding.
    * ParsedAtomFilters: filter received atoms and filter to other handlers
    * TimestampCorrectionFilters: Correct timestamps from broken
      sources to have monotonic time.

 -- Roman Fiedler <roman.fiedler@ait.ac.at>  Thu, 07 Apr 2016 16:50:00 +0000

logdata-anomaly-miner (0.0.0) xenial; urgency=low

  * Initial Release Features:
    * Common parsing model elements available: fixed strings,
      numbers, IP addresses, date-time fields, delimited fields,
      fixed alphabet fields, ...
    * Common parsing model structural elements: sequences, branches,
      repeated elements, optional elements.
    * Stream and file reading, splitting into lines.
    * Operating system integration: privileged parent process forwarding
      file descriptors to analysis child.
    * Reopening of log files using open/fstat loop.