@@ -3,6 +3,7 @@ V0.0.3 (Unreleased):
 
 * Backport of changes from Debian ITP process review, see
   https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=813096
+* Handle rollover from one logfile to the next more graceful
 
 
 V0.0.2 (2016-05-12):
